# cronlike

./: .gitignore  ChangeLog.md  LICENSE  README.md  cronlike.cabal
example/: Main.hs
src/System/: CronLike.hs
src/System/CronLike/: Types.hs
