
name:                cronlike
version:             0.9
synopsis:            Execute actions based on a schedule
  -- description:         
license:             MIT
license-file:        LICENSE
author:              Michael Karg
maintainer:          mgoremeier@gmail.com
homepage:            https://github.com/mgmeier/cronlike
bug-reports:         https://github.com/mgmeier/cronlike/issues
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/mgmeier/cronlike.git


library
  exposed-modules:     System.CronLike
  other-modules:       System.CronLike.Types   

  ghc-options:         -Wall

  build-depends:       base >=4.10 && <5, async, deepseq, time
  hs-source-dirs:      src
  default-language:    Haskell2010
